<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alex.motoproject.screenProfile.MyProfileFragment">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/profile_user_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/profile_user_avatar"
                style="@style/AvatarUserProfile"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description_avatar"
                android:maxHeight="300dp"
                android:maxWidth="300dp" />

            <TextView
                android:id="@+id/profile_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/profile_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/profile_user_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/profile_user_motorcycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/profile_about_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <Space
                android:id="@+id/space_optional"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/profile_user_buttons"
        style="@style/MyButtonCustomProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        android:gravity="end"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/profile_add_friend"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@null"
            android:contentDescription="@string/add_friend"
            android:src="@drawable/ic_profile_add" />

        <ImageButton
            android:id="@+id/profile_remove_from_friends"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@null"
            android:contentDescription="@string/remove_from_friends"
            android:src="@drawable/ic_remove_friend"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
